--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -10,6 +10,27 @@
  * defined in the other CSS/SCSS files in this directory. It is generally better to create a new
  * file per style scope.
  *
- *= require_tree .
- *= require_self
  */
+
+ @import "materialize/components/color";
+ $primary-color: color("light-blue", "darken-2") !default;
+ @import "materialize";
+
+body {
+  background-color: #FDFDFD;
+}
+
+header, main, footer {
+  padding-left: 240px;
+}
+
+@media only screen and (max-width : 992px) {
+  header, main, footer {
+    padding-left: 0;
+  }
+}
+
+#after-brand-logo {
+  float: left;
+  margin-left: 140px;
+}
