--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,35 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>SwifiV2</title>
+  <title>SwiFi</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
-  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+  <%= javascript_include_tag 'application' %>
   <%= csrf_meta_tags %>
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
-
-<%= yield %>
+  <nav>
+    <div class="nav-wrapper container">
+      <%= link_to "SwiFi", root_path, class: "brand-logo"%>
+      <ul class="right hide-on-med-and-down">
+        <li>
+          <%= link_to "Create JO", new_job_order_url, class: "waves-effect waves-light btn" %>
+        </li>
+        <li>
+          <form>
+            <div class="input-field">
+              <input id="search" type="search" required>
+              <label for="search"><i class="material-icons">search</i></label>
+              <i class="material-icons">close</i>
+            </div>
+          </form>
+        </li>
+      </ul>
+    </div>
+  </nav>
+  <div class="main container">
+    <%= yield %>
+  </div>
 
 </body>
 </html>
