--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,24 +13,37 @@
  */
 
  @import "materialize/components/color";
- $primary-color: color("light-blue", "darken-2") !default;
+ $primary-color: color("light-blue", "darken-3") !default;
  @import "materialize";
 
 body {
   background-color: #FDFDFD;
 }
 
-header, main, footer {
-  padding-left: 240px;
-}
+// header, main, footer {
+//   padding-left: 240px;
+// }
 
-@media only screen and (max-width : 992px) {
-  header, main, footer {
-    padding-left: 0;
-  }
-}
+// @media only screen and (max-width : 992px) {
+//   header, main, footer {
+//     padding-left: 0;
+//   }
+// }
 
 #after-brand-logo {
   float: left;
   margin-left: 140px;
+}
+
+nav ul a.hover {
+  background-color: rgba(0, 0, 0, 0.1);
+}
+
+.page-title {
+  margin: 0;
+  padding: 0;
+}
+
+h1 a i {
+  vertical-align: bottom;
 }
