--- a/app/views/clients/_form.html.erb
+++ b/app/views/clients/_form.html.erb
@@ -11,19 +11,31 @@
     </div>
   <% end %>
 
-  <div class="field">
-    <%= f.label :name %><br>
-    <%= f.text_field :name %>
+  <div class="field row">
+    <div class="input-field col m6 s12">
+      <%= f.text_field :name, class: "validate" %>
+      <%= f.label :name %>
+    </div>
   </div>
-  <div class="field">
-    <%= f.label :contact_person %><br>
-    <%= f.text_field :contact_person %>
+  <div class="field row">
+    <div class="input-field col m6 s12">
+      <i class="material-icons prefix">account_circle</i>
+      <%= f.text_field :contact_person %>
+      <%= f.label :contact_person %>
+    </div>
   </div>
-  <div class="field">
-    <%= f.label :contact_number %><br>
-    <%= f.text_field :contact_number %>
+  <div class="field row">
+    <div class="input-field col m6 s12">
+      <i class="material-icons prefix">phone</i>
+      <%= f.text_field :contact_number %>
+      <%= f.label :contact_number %>
+    </div>
   </div>
-  <div class="actions">
-    <%= f.submit %>
+  <div class="actions row">
+    <div class="col s12">
+      <button class="btn waves-effect waves-light" type="submit" name="action">Submit
+        <i class="material-icons right">send</i>
+      </button>
+    </div>
   </div>
 <% end %>
