--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -16,22 +16,34 @@
  $primary-color: color("light-blue", "darken-3") !default;
  @import "materialize";
 
+html, body {
+  min-height: 100%;
+  height: 100%;
+}
+
 body {
   background-color: #FDFDFD;
 }
 
-// header, main, footer {
-//   padding-left: 240px;
-// }
+header, main, footer {
+  padding-left: 240px;
+}
 
-// @media only screen and (max-width : 992px) {
-//   header, main, footer {
-//     padding-left: 0;
-//   }
-// }
+@media only screen and (max-width : 992px) {
+  header, main, footer {
+    padding-left: 0;
+  }
+}
+
+main {
+  padding-bottom: 120px;
+}
+
+.container {
+  width: 90%;
+}
 
 #after-brand-logo {
-  float: left;
   margin-left: 140px;
 }
 
@@ -47,3 +59,4 @@ nav ul a.hover {
 h1 a i {
   vertical-align: bottom;
 }
+
