content for page title

--- a/app/views/clients/show.html.erb
+++ b/app/views/clients/show.html.erb
@@ -1,9 +1,8 @@
 <p id="notice"><%= notice %></p>
 
-<p>
-  <strong>Name:</strong>
-  <%= @client.name %>
-</p>
+<% content_for :page_title do %>
+<%= @client.name %>
+<% end %>
 
 <p>
   <strong>Contact person:</strong>
