--- a/app/views/clients/show.html.erb
+++ b/app/views/clients/show.html.erb
@@ -14,5 +14,4 @@
   <%= @client.contact_number %>
 </p>
 
-<%= link_to 'Edit', edit_client_path(@client) %> |
-<%= link_to 'Back', clients_path %>
+<%= link_to 'Edit', edit_client_path(@client) %>
