--- a/app/views/job_orders/show.html.erb
+++ b/app/views/job_orders/show.html.erb
@@ -1,24 +1,10 @@
 <p id="notice"><%= notice %></p>
 
-<p>
-  <strong>Client:</strong>
+<% content_for :page_title do %>
+<%= @job_order.code %>
+<% end %>
+<h3>
   <%= @job_order.client_name %>
-</p>
+</h3>
 
-<p>
-  <strong>Mode of shipment:</strong>
-  <%= @job_order.mode_of_shipment_display %>
-</p>
-
-<p>
-  <strong>Service type:</strong>
-  <%= @job_order.service_type_display %>
-</p>
-
-<p>
-  <strong>Services:</strong>
-  <%= @job_order.services_display %>
-</p>
-
-<%= link_to 'Edit', edit_job_order_path(@job_order) %> |
-<%= link_to 'Back', job_orders_path %>
+<%= link_to 'Edit', edit_job_order_path(@job_order) %>
