--- a/app/views/clients/index.html.erb
+++ b/app/views/clients/index.html.erb
@@ -1,8 +1,10 @@
-<p id="notice"><%= notice %></p>
-
 <% content_for :page_title do %>
-<span>Clients</span>  <a href='<%= "#{new_client_path}" %>' class="btn-floating btn-large waves-effect waves-light red"><i class="material-icons">add</i></a>
+<span>Clients</span>
 <% end %>
+
+<div class="fixed-action-btn" style="bottom: 45px; right: 24px;">
+  <a href='<%= "#{new_client_path}" %>' class="btn-floating btn-large waves-effect waves-light red"><i class="material-icons">add</i></a>
+</div>
 
 <%= will_paginate(@clients) %>
 <table class="highlight">
