--- a/app/views/clients/_form.html.erb
+++ b/app/views/clients/_form.html.erb
@@ -13,10 +13,18 @@
 
   <div class="field row">
     <div class="input-field col m6 s12">
-      <%= f.text_field :name, class: "validate" %>
+      <%= f.text_field :name %>
       <%= f.label :name %>
     </div>
   </div>
+
+  <div class="field row">
+    <div class="input-field col m6 s12">
+      <%= f.text_field :address %>
+      <%= f.label :address %>
+    </div>
+  </div>
+
   <div class="field row">
     <div class="input-field col m6 s12">
       <i class="material-icons prefix">account_circle</i>
@@ -24,6 +32,7 @@
       <%= f.label :contact_person %>
     </div>
   </div>
+
   <div class="field row">
     <div class="input-field col m6 s12">
       <i class="material-icons prefix">phone</i>
@@ -31,6 +40,7 @@
       <%= f.label :contact_number %>
     </div>
   </div>
+
   <div class="actions row">
     <div class="col s12">
       <button class="btn waves-effect waves-light" type="submit" name="action">Submit
