--- a/app/views/clients/show.html.erb
+++ b/app/views/clients/show.html.erb
@@ -1,17 +1,34 @@
-<p id="notice"><%= notice %></p>
-
 <% content_for :page_title do %>
 <%= @client.name %>
 <% end %>
 
-<p>
-  <strong>Contact person:</strong>
-  <%= @client.contact_person %>
-</p>
+<div class="fixed-action-btn" style="bottom: 45px; right: 24px;">
+  <a class="btn-floating btn-large red" href="<%= edit_client_path(@client) %>">
+    <i class="large material-icons">mode_edit</i>
+  </a>
+</div>
 
-<p>
-  <strong>Contact number:</strong>
-  <%= @client.contact_number %>
-</p>
-
-<%= link_to 'Edit', edit_client_path(@client) %>
+<div class="row">
+  <div class="col m2 s5">
+    <strong>Address :</strong>
+  </div>
+  <div class="col m8 s6">
+    <%= @client.address_display %>
+  </div>
+</div>
+<div class="row">
+  <div class="col m2 s5">
+  <strong>Contact Person :</strong>
+  </div>
+  <div class="col m8 s6">
+    <%= @client.contact_person_display %>
+  </div>
+</div>
+<div class="row">
+  <div class="col m2 s5">
+    <strong>Contact Number :</strong>
+  </div>
+  <div class="col m8 s6">
+    <%= @client.contact_number_display %>
+  </div>
+</div>
