--- a/app/views/job_orders/_form.html.erb
+++ b/app/views/job_orders/_form.html.erb
@@ -16,7 +16,6 @@
         <ul class="tabs">
           <li class="tab col s3"><a class="active" href="#service">Service</a></li>
           <li class="tab col s3"><a href="#details">Details</a></li>
-          <li class="tab col s3"><a href="#expenses">Expenses</a></li>
         </ul>
       </div>
       <div id="service" class="col s12">
@@ -35,28 +34,30 @@
         <div class="field row">
           <div class="input-field col m6 s12">
             <%= f.select :client_id, options_for_select([['Please select', 0, {disabled: "disabled"}], *@clients.map{|client| [client.name, client.id]}], @job_order.client_id || 0), {}, "data-enabled-for": "job_order_select_client_true" %>
-            <label>Client</label>
+            <%= f.label :client_id %>
           </div>
         </div>
 
-        <div class="field row">
-          <div class="col s12">
-            <p>
-              <%= f.radio_button :select_client, false, class: "with-gap"%>
-              <label for="job_order_select_client_false" >
-                Add new Client
-              </label>
-            </p>
-          </div>
-        </div>
-
-        <%= f.fields_for :client, @job_order.client do |builder| %>
-          <div class="field row">
-            <div class="input-field col m6 s12">
-              <%= builder.text_field :name, "data-enabled-for": "job_order_select_client_false" %>
-              <label>Client Name</label>
+        <% if @job_order.new_record? %>
+          <%= f.fields_for :client, @job_order.client do |builder| %>
+            <div class="field row">
+              <div class="col s12">
+                <p>
+                  <%= f.radio_button :select_client, false, class: "with-gap"%>
+                  <label for="job_order_select_client_false" >
+                    Add new Client
+                  </label>
+                </p>
+              </div>
             </div>
-          </div>
+
+            <div class="field row">
+              <div class="input-field col m6 s12">
+                <%= builder.text_field :name, "data-enabled-for": "job_order_select_client_false" %>
+                <%= builder.label :name, 'Client Name' %>
+              </div>
+            </div>
+          <% end %>
         <% end %>
 
         <div class="field row">
